모바일 버전 추가

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./css/main_media.css">
+  <link rel="stylesheet" href="./css/main_media_tab.css">
+  <link rel="stylesheet" href="./css/main_media_mo.css">
 
   <!-- 제이쿼리 -->
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
@@ -584,9 +585,9 @@
             </li>
           </ul>
         </nav>
-        <div class="btn_close">
-          <img src="./images/btn_gnb_close.png" alt="메뉴닫기">
-        </div>
+      </div>
+      <div id="gnb_close">
+        <img src="./images/btn_gnb_close.png" alt="메뉴닫기">
       </div>
     </div>
 
